[package]
name = "sipcat"
version = "0.1.0"
authors = ["Chad Selph <chad.selph@gmail.com>"]

[dependencies]
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
env_logger = "0.3"
uuid = { version = "0.5", features = ["v4"] }
trust-dns = { version = "0.9.2", default-features = false }
clap = "2.24.2"
ansi_term = "0.9"

[dependencies.nom]
version = "^3.0"
features = ["verbose-errors"]